12. Feb. 2013 - amo - JACPManagedDialog: add cache for singleton dialogs
06. Feb. 2013 - amo -  FXComponentReplaceWorker: execute this.executeComponentViewPostHandle before parentComponentCheck
24. Jan. 2013 - amo -  JACPManagedDialog: add managed dialog class to create managed, fxml/javafx components and have access to di container
24. Jan. 2013 - amo -  FXComponentCoordinator: removed component list and replaced calls with calls to registry
24. Jan. 2013 - amo -  Add ComponentRegestry to have a central repo to ret references to components
09. Jan. 2013 - amo -  ShutdownThreadsHandler: add APPLICATION_RUNNING flag
09. Jan. 2013 - amo -  ASubComponent: mutex removed
09. Jan. 2013 - amo -  FXComponentReplaceWorker: removed "synchronized" on component, removed global locking, use invokeOnFXThreadAndWait instead
09. Jan. 2013 - amo -  FXComponentInitWorker: replaced all Platform.runLater call by invokeOnFXThreadAndWait, removed global lock, release calls
09. Jan. 2013 - amo -  AFXComponentWorker: removed global lockQueue and add invokeOnFXThreadAndWait method, removed lock and release methods
14. Dez. 2012 - amo -  TearDownHandler, update to support teardown of StatelessComponent instances
13. Dez. 2012 - amo -  StateLessComponentRunWorker, finished shutdown of stateless components.
13. Dez. 2012 - amo -  AStatelessCallbackComponent, set Executor service to volatile
12. Dez. 2012 - amo -  ASubComponent, add mutex to synchronize lock handler of component
12. Dez. 2012 - amo -  Add TearDownWorker to manage @OnTearDown outside application thread for Stete- and stateless components. Update TearDownHandler for use with TearDownWorker
11. Dez. 2012 - amo -  StateLessComponentRunWorker handle OnStart annotation, set component to started after init.
11. Dez. 2012 - amo -  StateComponentRunWorker create postHandle method for Teardown and moved execution to worker thread. OnStart and OnTeardown are now executed in worker.