@@ -10,13 +10,26 @@ import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 
 /**
+ *
+ * The Class LayoutUtil.
+ *
+ * Util to group some Layout-Function.
+ *
  * @author Patrick Symmangk
- * 
+ *
  */
 public class LayoutUtil {
 
     public static class GridPaneUtil {
 
+
+        /**
+         *
+         * Set GridPane hGrow AND vGrow to multiple Nodes
+         *
+         * @param priority - priority to set
+         * @param nodes - the nodes
+         */
         public static void setFullGrow(Priority priority, Node... nodes) {
             for (Node node : nodes) {
                 if (node != null) {
@@ -26,7 +39,13 @@ public class LayoutUtil {
             }
         }
 
-        
+        /**
+         *
+         * Set GridPane hGrow to multiple Nodes
+         *
+         * @param priority - priority to set
+         * @param nodes - the nodes
+         */
         public static void setHGrow(Priority priority, Node... nodes) {
             for (Node node : nodes) {
                 if (node != null) {
@@ -34,8 +53,15 @@ public class LayoutUtil {
                 }
             }
         }
-        
-        
+
+
+        /**
+         *
+         * Set GridPane vGrow to multiple Nodes
+         *
+         * @param priority - priority to set
+         * @param nodes - the nodes
+         */
         public static void setVGrow(Priority priority, Node... nodes) {
             for (Node node : nodes) {
                 if (node != null) {
@@ -46,8 +72,19 @@ public class LayoutUtil {
         
     }
 
+    /**
+     * The HBoxUtil subclass.
+     *
+     */
     public static class HBoxUtil {
 
+        /**
+         *
+         * Set HBox hGrow to multiple Nodes
+         *
+         * @param priority - priority to set
+         * @param nodes - the nodes
+         */
         public static void setHGrow(Priority priority, Node... nodes) {
             for (Node node : nodes) {
                 if (node != null) {
@@ -56,11 +93,25 @@ public class LayoutUtil {
             }
         }
 
+        /**
+         *
+         * Set margin to multiple Nodes.
+         *
+         * @param insets - the margin insets
+         * @param nodes - the nodes to receive the margin
+         */
         public static void setMargin(Insets insets, Node... nodes) {
             setMargin(insets, Arrays.asList(nodes));
 
         }
 
+        /**
+         *
+         * Set margin to a collection of Nodes.
+         *
+         * @param insets - the margin insets
+         * @param nodes - the nodes to receive the margin
+         */
         public static void setMargin(Insets insets, Collection<Node> nodes) {
             for (Node node : nodes) {
                 if (node != null) {
